<resources>
    <string name="app_name">HanzeBoard</string>
    <string name="key_jwt_token" translatable="false">JWT_TOKEN</string>
    <string name="key_tokens" translatable="false">TOKENS</string>
    <string name="http_cookies" translatable="false">HTTP_COOKIES</string>
    <string name="title_activity_overview">Overview</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_grades">Grades</string>
    <string name="menu_absent">Absentees</string>
    <string name="menu_announcements">Announcements</string>
    <string name="home_second" translatable="false">Home Second</string>
    <string name="welcome">Welcome to the HanzeBoard App!</string>
    <string name="login" translatable="false">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="average_grade">Average grade:</string>
    <string name="passing_rate">Pass rate:</string>
    <string name="users_grade">Your grade</string>
    <string name="credits">Credits: </string>
    <string name="menu_profile">Profile</string>
    <string name="grade_overview">Grade overview:</string>
    <string name="passing_text">passed</string>
    <string name="user_excelled">with this result you are the best student.</string>
    <string name="other_users_excelled">achieved the same/ higher result</string>
    <string name="grade_category">Students\' grades per category</string>
    <string name="language_dutch">Dutch</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_chinese_mandarin">Mandarin Chinese</string>
    <string name="language_taiwanese_mandarin">Taiwanese Mandarin</string>
    <string name="posted_by">Placed by:</string>
    <string name="posted_at">Placed at:</string>
    <string name="sick">sick</string>
    <string name="absent">absent</string>
    <string name="leave">leave</string>
</resources>
