<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dutch"
        android:title="@string/language_dutch"
        app:showAsAction="never" />
    <item
        android:id="@+id/english"
        android:title="@string/language_english"
        app:showAsAction="never" />
    <item
        android:id="@+id/french"
        android:title="@string/language_french"
        app:showAsAction="never" />
    <item
        android:id="@+id/japanese"
        android:title="@string/language_japanese"
        app:showAsAction="never" />
    <item
        android:id="@+id/chinese"
        android:title="@string/language_chinese"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/mandarin_chinese"
                android:title="@string/language_chinese_mandarin" />
            <item
                android:id="@+id/taiwanese_mandarin"
                android:title="@string/language_taiwanese_mandarin" />
        </menu>
    </item>
</menu>