<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_announcement"
            android:title="@string/menu_announcements" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_grade"
            android:title="@string/menu_grades" />
        <item
            android:id="@+id/nav_absent"
            android:icon="@drawable/ic_absent"
            android:title="@string/menu_absent" />
    </group>
</menu>
