<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="nl.hanze.hanzeboard.activities.overview.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="nl.hanze.hanzeboard.activities.overview.courses.CoursesFragment"
        android:label="@string/menu_announcements"
        tools:layout="@layout/courses_fragment">

        <action
            android:id="@+id/navigate_to_announcements"
            app:destination="@id/nav_announcements" />
    </fragment>

    <fragment
        android:id="@+id/nav_announcements"
        android:name="nl.hanze.hanzeboard.activities.overview.announcements.AnnouncementsFragment"
        tools:layout="@layout/announcements_fragment">

        <action
            android:id="@+id/navigate_to_courses"
            app:destination="@id/nav_courses" />
    </fragment>

    <fragment
        android:id="@+id/nav_grades"
        android:name="nl.hanze.hanzeboard.activities.overview.grades.GradesFragment"
        android:label="@string/menu_grades"
        tools:layout="@layout/grades_fragment">

        <action
            android:id="@+id/navigate_to_gradeOverview"
            app:destination="@id/grade_overview" />

    </fragment>

    <fragment
        android:id="@+id/grade_overview"
        android:name="nl.hanze.hanzeboard.activities.overview.grades.GradeOverviewFragment"
        android:label="@string/menu_grades"
        tools:layout="@layout/advanced_grade_overview">

        <action
            android:id="@+id/navigate_to_grades"
            app:destination="@id/nav_grades" />

    </fragment>

    <fragment
        android:id="@+id/nav_absent"
        android:name="nl.hanze.hanzeboard.activities.overview.absent.AbsentFragment"
        android:label="@string/menu_absent"
        tools:layout="@layout/absent_fragment"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="nl.hanze.hanzeboard.activities.overview.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment"/>
</navigation>