<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="394dp"
        android:layout_height="519dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="399dp"
        android:layout_height="157dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChart">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="401dp"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/averageGrade"
                android:layout_width="182dp"
                android:layout_height="35dp"
                android:layout_marginTop="56dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/average_grade"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userGrade" />

            <TextView
                android:id="@+id/passingRate"
                android:layout_width="383dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="7dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/passing_rate"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toTopOf="@+id/averageGrade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userGrade"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/userGrade"
                android:layout_width="382dp"
                android:layout_height="51dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/users_grade"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/credits"
                android:layout_width="192dp"
                android:layout_height="33dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="56dp"
                android:padding="8dp"
                android:text="@string/credits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/averageGrade"
                app:layout_constraintTop_toBottomOf="@+id/userGrade" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>